--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,4 +2,16 @@
     display: block;
     max-width: 1320px;
     margin: 0 auto;
+    padding: 30px;
+}
+
+.search-input-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+.search-input {
+    flex-grow: 1;
+    max-width: 600px;
 }
