--- a/src/app/styles/_reset.scss
+++ b/src/app/styles/_reset.scss
@@ -1,5 +1,9 @@
 * {
     margin: 0;
     padding: 0;
+    outline: none;
+    border: none;
+    background: none;
     box-sizing: border-box;
+    font: inherit;
 }
