--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 @import './app/styles/reset';
+@import './app/styles/controls';
+
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 14px;
+}
