photo hover action

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
     Loading...
 </div>
 
-<app-images-list
+<app-photos-list
     *ngIf="!isLoading"
-    [urls]="imagesUrls"
-></app-images-list>
+    [photos]="photos"
+></app-photos-list>
