--- a/src/app/shared/components/photos-list/photos-list.component.html
+++ b/src/app/shared/components/photos-list/photos-list.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let photo of photos">
-    <app-photo [url]="photo.download_url" [author]="photo.author"></app-photo>
+    <app-photo [url]="photo.url" [author]="photo.author"></app-photo>
 </div>
