--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,4 +13,5 @@
 <app-photos-list
     *ngIf="!isLoading"
     [photos]="photos"
+    (addToCollection)="onAddToCollection($event)"
 ></app-photos-list>
