--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,9 @@
 @import './app/styles/reset';
 @import './app/styles/controls';
 
+html, body {
+    height: 100%;
+}
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 14px;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
