add photo to collection

--- a/src/app/shared/components/collection/collection.component.html
+++ b/src/app/shared/components/collection/collection.component.html
@@ -1,6 +1,12 @@
-<div class="collection__count">
-    {{ collection.count }} photos
+<div>
+    <div class="collection__count">
+        {{ collection.photosIds.length }} photos
+    </div>
+    <div class="collection__name">
+        {{ collection.name }}
+    </div>
 </div>
-<div class="collection__name">
-    {{ collection.name }}
+
+<div *ngIf="showPhotoState" class="photo-state">
+    {{ isPhotoInCollection ? 'In collection' : 'Add to collection' }}
 </div>
