--- a/src/app/shared/components/collection/collection.component.scss
+++ b/src/app/shared/components/collection/collection.component.scss
@@ -1,5 +1,7 @@
 :host {
-    display: block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-bottom: 20px;
     padding: 20px;
     background-color: rgba(0,0,0,0.4);
