--- a/src/app/shared/components/select-collection-dialog/select-collection-dialog.component.html
+++ b/src/app/shared/components/select-collection-dialog/select-collection-dialog.component.html
@@ -1,10 +1,10 @@
 <h2 mat-dialog-title>Add to collection</h2>
 <mat-dialog-content>
-    <div>
-        {{ data.photo.author }}
-    </div>
     <app-collection
         *ngFor="let collection of collections"
         [collection]="collection"
+        [isPhotoInCollection]="collection.photosIds.includes(data.photo.id)"
+        [showPhotoState]="true"
+        (click)="onCollectionSelect(collection)"
     ></app-collection>
 </mat-dialog-content>
