--- a/src/app/shared/components/collection/collection.component.html
+++ b/src/app/shared/components/collection/collection.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="collection__count">
-        {{ collection.photosIds.length }} photos
+        {{ collection.photos.length }} photos
     </div>
     <div class="collection__name">
         {{ collection.name }}
