--- a/src/app/shared/components/collection/collection.component.scss
+++ b/src/app/shared/components/collection/collection.component.scss
@@ -11,6 +11,10 @@
     transition: all 0.3s ease;
     cursor: pointer;
 
+    &.selected {
+        background-color: rgba(0,0,0,0.8);
+    }
+
     &:last-child {
         margin-bottom: 0;
     }
