add new collection

--- a/src/app/home/search-input/search-input.component.html
+++ b/src/app/home/search-input/search-input.component.html
@@ -2,5 +2,5 @@
     [formControl]="inputControl"
     [placeholder]="placeholder"
     type="text"
-    class="control_input control-input_responsive"
+    class="control_input control_responsive"
 />
