--- a/src/app/styles/_controls.scss
+++ b/src/app/styles/_controls.scss
@@ -4,6 +4,24 @@
     border-radius: 4px;
 }
 
-.control-input_responsive {
+.control_textarea {
+    resize: none;
+    min-height: 100px;
+}
+
+.control_button {
+    padding: 12px;
+    border-radius: 4px;
+    color: #fff;
+    background-color: #333;
+    text-transform: uppercase;
+    cursor: pointer;
+
+    &:hover {
+        background-color: #000;
+    }
+}
+
+.control_responsive {
     width: 100%;
 }
