--- a/src/app/collections/collections.component.html
+++ b/src/app/collections/collections.component.html
@@ -8,4 +8,5 @@
 <app-photos-list
     *ngIf="selectedCollection"
     [photos]="selectedCollection.photos"
+    [downloadable]="true"
 ></app-photos-list>
