--- a/src/app/shared/components/photos-list/photos-list.component.html
+++ b/src/app/shared/components/photos-list/photos-list.component.html
@@ -2,6 +2,7 @@
     <app-photo
         [url]="photo.url"
         [author]="photo.author"
+        [downloadable]="downloadable"
         (addToCollection)="onAddToCollection(photo)"
     ></app-photo>
 </div>
