fix image columns

--- a/src/app/shared/components/photos-list/photos-list.component.html
+++ b/src/app/shared/components/photos-list/photos-list.component.html
@@ -4,4 +4,5 @@
     [author]="photo.author"
     [downloadable]="downloadable"
     (addToCollection)="onAddToCollection(photo)"
+    class="photo-item"
 ></app-photo>
