--- a/src/app/shared/components/photos-list/photos-list.component.scss
+++ b/src/app/shared/components/photos-list/photos-list.component.scss
@@ -1,5 +1,21 @@
 :host {
-    display: grid;
-    grid-gap: 30px;
-    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+    display: block;
+    column-count: 3;
+    column-gap: 20px;
+
+    @media screen and (max-width: 1000px) {
+        column-count: 2;
+    }
+
+    @media screen and (max-width: 650px) {
+        column-count: 1;
+    }
+}
+
+.photo-item  {
+    margin-bottom: 20px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
 }
